made the snipet panel to be visible against all toggle options, added character snipets, altered CSS, fixed JS.

--- a/src/style.css
+++ b/src/style.css
@@ -26,7 +26,7 @@ body
     align-items: center;
     gap: 5px;
     background: #776652;
-    border-radius: 0px;
+    border-radius: 2px;
     border: 2px solid #4d3820;
     padding: 4px;
     white-space: nowrap;
@@ -57,14 +57,15 @@ body
 {
     background: #b16b6b; /*#836549*/
     color: #f5e6ce;
-    border-color: #834646; /*#2e1b0b*/
+    border: 2px solid #7a4747; /*#2e1b0b*/
 }
 
 .win-bg-wrapper
 {
     position: relative;
-    width: 850px;
+    width: 780px;
     height: 620px;
+    background: #8f7e66;
     border-radius: 9px;
     overflow: hidden;
 }
@@ -96,7 +97,7 @@ body
     border-radius: 0px;
     border: 2px solid #4d3820;
     padding: 6px;
-    display: none;
+    display: block;
     overflow-y: auto;
 }
 
@@ -105,9 +106,14 @@ body
     display: block;
 }
 
-.snippet-grid
+.snippet-grid.active
 {
     display: grid;
+}
+
+.snippet-grid
+{
+    display: none;
     grid-template-columns: repeat(3, 1fr);
     gap: 5px;
 }
@@ -118,20 +124,22 @@ body
     aspect-ratio: 1;
     object-fit: cover;
     border-radius: 5px;
-    border: 2px solid transparent;
+    background: #ffffff;
+    /* border: 1px solid transparent; */
     cursor: pointer;
     transition: background 0.2s, border-color 0.2s;
 }
 
 .snippet-grid img:hover
 {
-    border: 2px solid #2e1b0b41;
+    /* border: 2px solid #2e1b0b00; */
+    border: none;
     outline: 1px solid #d4b89627;
 }
 
 .snippet-grid img.selected
 {
-    background: #836549;
+    background: #fce0c7;
     border: 2px solid #2e1b0b;
 }
 .preview-box
@@ -139,8 +147,8 @@ body
     position: absolute;
     top: 100px;
     left: 24px;
-    width: 380px;
-    height: 380px; 
+    width: 420px;
+    height: 420px; 
     background: #776652;
     border-radius: 0px;
     border: 2px solid #4d3820;
